# markdown-publisher

./: README.md  markdown-publisher.py  note-to-pdf.py  pyproject.toml  regex-test.py
markdown_publisher/: main.py
templates/: default-setup.tex  template_eisvogel_custom.tex  template_exfac-essay.docx  template_exfac-essay.tex  template_letter.tex  template_note-export.tex  template_one-page-essay.tex  template_refleksjonsnotat-hon1000.tex
