[tool.poetry]
name = "markdown-publisher"
version = "0.1.0"
description = ""
authors = ["Severin Gartland <sfgartland@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
typer = "^0.15.1"
inquirer = "^3.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
markdown-publisher = "markdown_publisher.main:cli"
